# training

./: .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .mkdocs-quiz.yml  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  INSTALL_MAC.sh  LEARN.md  LICENSE.md  LICENSE.txt  Makefile  README.md  TRANSLATING.md  _headers  _redirects  cloud9-create.sh  cloud9-destroy.sh  format-names.pl  format-names.txt  gitpod-ws.code-workspace  index.html  main.nf  mkdocs.yml  netlify.toml  nf-training-advanced.code-workspace  nf-training-playbook.yml  preview_release.py  report-20250318-69427424.html  requirements.txt  temp.md  timeline-20250318-69427424.html  tower.yml  trace-20250318-69427424.txt  user-names.txt  versions.json
.claude/: .clinerules  README.md
.devcontainer/: Dockerfile  devcontainer.json  install-platform-tools.sh  postCreateCommand.sh  requirements.txt  setup.sh
.github/: Dockerfile  check_headings.py  gitpod.Dockerfile  mkdocs.Dockerfile  studios.Dockerfile
.seqera/: environment.yaml  studio-config.yaml
0.dev/: 404.html  index.html  sitemap.xml
2.0.1/: 404.html  index.html  sitemap.xml
_scripts/: add_translation_notice.py  doc_parsing_utils.py  docs.py  general-llm-prompt.md  mkdocs_hooks.py  pyproject.toml  translate.py  translation_fixer.py
_scripts/translate/: __init__.py  __main__.py  api.py  chunking.py  cli.py  config.py  core.py  git_utils.py  models.py  paths.py  postprocess.py  progress.py  prompts.py  translate_config.yml  verify.py
_scripts/translate/tests/: test_chunking.py  test_postprocess.py
(+22478 files in other folders)
